force-app/main/default/objects/CONTRACT__c/CONTRACT__c.object-meta.xml
<CustomObject>
    <label>CONTRACT</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>CONTRACT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CONTRACTS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>