force-app/main/default/objects/CONTRACT__c/fields/Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Signature_Date__c</fullName>
    <label>Signature Date</label>
    <type>DateTime</type>
</CustomField>