force-app/main/default/objects/CONTRACT__c/fields/Signed_By_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed By Candidate</label>
    <referenceTo>CANDIDATE__c</referenceTo>
    <relationshipLabel>CONTRACTS</relationshipLabel>
    <relationshipName>CONTRACTS</relationshipName>
    <type>Lookup</type>
</CustomField>