force-app/main/default/objects/CONTRACT__c/fields/Signed_By_Company__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed By Company</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CONTRACTS</relationshipLabel>
    <relationshipName>CONTRACTS</relationshipName>
    <type>Lookup</type>
</CustomField>