force-app/main/default/objects/CONTRACT__c/fields/student__c.field-meta.xml
<CustomField>
    <fullName>student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>student</label>
    <referenceTo>student__c</referenceTo>
    <relationshipLabel>CONTRACTS</relationshipLabel>
    <relationshipName>CONTRACTS</relationshipName>
    <type>Lookup</type>
</CustomField>